Try to avoid footer spilling onto two rows on smaller screens

--- a/src/styles/piaf.scss
+++ b/src/styles/piaf.scss
@@ -92,6 +92,12 @@ div.navbar-nav {
     z-index: 1;
 }
 
+@media (max-width: 576px) {
+    #pause:disabled, #resume:disabled {
+        display: none;
+    }
+}
+
 // Index pages
 
 .piaf-media-table {
